--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:background="@color/app_green"
+        android:onClick="onSubmitButtonOnClick"
         android:text="@string/sign_in_text"
         app:backgroundTint="@color/app_green"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +84,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:gravity="center_horizontal|center_vertical"
-            android:onClick="onRegisterButtonClick"
+            android:onClick="onRegisterButtonOnClick"
             android:padding="0dp"
             android:text="@string/register_button_text" />
 
